03-demo/04-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  selector:
    matchLabels:
      app: locust-primary
  template:
    metadata:
      labels:
        app: locust-primary
    spec:
      containers:
        - name: locust
          image: locustio/locust
          args: ["--master"]
          ports:
            - containerPort: 5557
              name: comm
            - containerPort: 5558
              name: comm-plus-1
            - containerPort: 8089
              name: web-ui
          volumeMounts:
            - mountPath: /home/locust
              name: locust-script
      volumes:
        - name: locust-script
          configMap:
            name: locust-script
---
apiVersion: v1
kind: Service
metadata:
  name: locust
spec:
  ports:
    - port: 5557
      name: communication
    - port: 5558
      name: communication-plus-1
    - port: 80
      targetPort: 8089
      name: web-ui
  selector:
    app: locust-primary
  type: LoadBalancer
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: locust
spec:
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
        - name: locust
          image: locustio/locust
          args: ["--worker", "--master-host=locust"]
          volumeMounts:
            - mountPath: /home/locust
              name: locust-script
      volumes:
        - name: locust-script
          configMap:
            name: locust-script
